--- a/Style.css
+++ b/Style.css
@@ -83,3 +83,43 @@ tr:nth-child(even) {
 tr:hover {
   background-color: #ffe4ec;
 }
+
+/* 🌸 Bunga jatuh animasi */
+@keyframes fall {
+  0% {
+    transform: translateY(-100px) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100vh) rotate(360deg);
+    opacity: 0;
+  }
+}
+
+.flower {
+  position: fixed;
+  top: -50px;
+  z-index: 9999;
+  font-size: 24px;
+  animation: fall linear infinite;
+  pointer-events: none;
+}
+
+.flower:nth-child(1) { left: 5%; animation-duration: 12s; }
+.flower:nth-child(2) { left: 20%; animation-duration: 14s; }
+.flower:nth-child(3) { left: 40%; animation-duration: 13s; }
+.flower:nth-child(4) { left: 60%; animation-duration: 11s; }
+.flower:nth-child(5) { left: 80%; animation-duration: 15s; }
+
+/* 🌼 Ikon bunga pojok */
+.flower-icon {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Simple_flower_icon.svg/512px-Simple_flower_icon.svg.png');
+  background-size: cover;
+  opacity: 0.6;
+  z-index: 1000;
+}
